--- a/src/Components/NavBar.css
+++ b/src/Components/NavBar.css
@@ -6,6 +6,8 @@
     justify-content: space-between;
     position: fixed;
     background-color: rgb(67, 69, 78);
+    align-items: center;
+    padding: 1rem;
 }
 
 .header-name{
@@ -13,12 +15,10 @@
     font-weight: 200;
     font-size: x-large;
     color: white;
-    padding: 1rem;
 }
 
 .social-logo{
     color: white;
-    padding: 1rem;
     font-size: x-large;
     transition: transform .2s;
 }
